--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,34 +1,41 @@
-.homepage {
-  font-family: "system-ui, sans-serif";
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
+body {
+  background-color: #333;
+  color: white;
+  padding-top: 4rem;
 }
 
-.title {
-  font-size: 3rem;
-  line-height: 6rem;
-  display: block;
+img.handshake {
+  max-height: 3rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.content {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+bodytest {
+background: linear-gradient(124deg, #ff2400, #e81d1d, #daa803, #099420, #2b1de8, #dd00f3, #dd00f3);
+background-size: 1800% 1800%;
+
+-webkit-animation: rainbow 18s ease infinite;
+-z-animation: rainbow 18s ease infinite;
+-o-animation: rainbow 18s ease infinite;
+  animation: rainbow 18s ease infinite;}
+
+@-webkit-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
 }
-
-.input-container { 
-  display: flex;
-  flex-direction: column;
+@-moz-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
 }
-
-.input-label {
-  line-height: 2em;
+@-o-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
 }
-
-.input {}
-
-.translate-button {}
+@keyframes rainbow { 
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
