--- a/public/css/global.css
+++ b/public/css/global.css
@@ -11,11 +11,43 @@ img.handshake {
 }
 
 footer {
-  position:absolute;
-  bottom: 0;
+  margin-top: 1rem;
   width: 100%;
   text-align: center;
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #222;
+}
+
+.blurb-image {
+    width:300px !important;
+    height:300px !important;
+    object-fit:cover;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.blurb-paragraph {
+  font-size: 1.5rem;
+}
+
+.card {
+  border: none !important;
+}
+
+.card-body {
+  background-color: #222;
+}
+
+.card-link {
+  color: white;
+}
+
+footer > a {
+  color: white;
+}
+
+a:hover {
+  color: yellow;
 }
