--- a/public/css/global.css
+++ b/public/css/global.css
@@ -51,3 +51,10 @@ footer > a {
 a:hover {
   color: yellow;
 }
+
+.play-btn {
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+  font-size: 2rem;
+}
